WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
57713
<details> marker loses its margin
https://bugs.webkit.org/show_bug.cgi?id=57713
Summary
<details> marker loses its margin
mitz
Reported
2011-04-02 17:00:05 PDT
<details> marker loses its margin
Attachments
Set margins in computePreferredLogicalWidths()
(951.87 KB, patch)
2011-04-02 17:11 PDT
,
mitz
bdakin
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
mitz
Comment 1
2011-04-02 17:11:19 PDT
Created
attachment 87990
[details]
Set margins in computePreferredLogicalWidths()
mitz
Comment 2
2011-04-02 17:35:31 PDT
Fixed in
r82783
. <
http://trac.webkit.org/changeset/82783
>
WebKit Review Bot
Comment 3
2011-04-02 19:14:39 PDT
http://trac.webkit.org/changeset/82783
might have broken Qt Linux Release
mitz
Comment 4
2011-04-02 20:23:29 PDT
(In reply to
comment #3
)
>
http://trac.webkit.org/changeset/82783
might have broken Qt Linux Release
Landed platform-specific results in
r82785
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug