<details> marker loses its margin https://bugs.webkit.org/show_bug.cgi?id=57713

Reviewed by Beth Dakin.

Source/WebCore:

* rendering/RenderDetails.cpp:
(WebCore::RenderDetails::computePreferredLogicalWidths): Override to update
the marker location.
* rendering/RenderDetails.h:
(WebCore::RenderDetails::renderName): Made private.
(WebCore::RenderDetails::isDetails): Ditto.
* rendering/RenderDetailsMarker.cpp:
(WebCore::RenderDetailsMarker::computePreferredLogicalWidths): Set the margins
in the style, like RenderListMarker does.
(WebCore::RenderDetailsMarker::layout): Set the margins from the style.

LayoutTests:

* platform/mac/fast/html/details-add-summary-1-and-click-expected.checksum:
* platform/mac/fast/html/details-add-summary-1-and-click-expected.png:
* platform/mac/fast/html/details-add-summary-1-and-click-expected.txt:
* platform/mac/fast/html/details-add-summary-1-expected.checksum:
* platform/mac/fast/html/details-add-summary-1-expected.png:
* platform/mac/fast/html/details-add-summary-1-expected.txt:
* platform/mac/fast/html/details-add-summary-10-and-click-expected.checksum:
* platform/mac/fast/html/details-add-summary-10-and-click-expected.png:
* platform/mac/fast/html/details-add-summary-10-and-click-expected.txt:
* platform/mac/fast/html/details-add-summary-10-expected.checksum:
* platform/mac/fast/html/details-add-summary-10-expected.png:
* platform/mac/fast/html/details-add-summary-10-expected.txt:
* platform/mac/fast/html/details-add-summary-2-and-click-expected.checksum:
* platform/mac/fast/html/details-add-summary-2-and-click-expected.png:
* platform/mac/fast/html/details-add-summary-2-and-click-expected.txt:
* platform/mac/fast/html/details-add-summary-2-expected.checksum:
* platform/mac/fast/html/details-add-summary-2-expected.png:
* platform/mac/fast/html/details-add-summary-2-expected.txt:
* platform/mac/fast/html/details-add-summary-3-and-click-expected.checksum:
* platform/mac/fast/html/details-add-summary-3-and-click-expected.png:
* platform/mac/fast/html/details-add-summary-3-and-click-expected.txt:
* platform/mac/fast/html/details-add-summary-3-expected.checksum:
* platform/mac/fast/html/details-add-summary-3-expected.png:
* platform/mac/fast/html/details-add-summary-3-expected.txt:
* platform/mac/fast/html/details-add-summary-4-and-click-expected.checksum:
* platform/mac/fast/html/details-add-summary-4-and-click-expected.png:
* platform/mac/fast/html/details-add-summary-4-and-click-expected.txt:
* platform/mac/fast/html/details-add-summary-4-expected.checksum:
* platform/mac/fast/html/details-add-summary-4-expected.png:
* platform/mac/fast/html/details-add-summary-4-expected.txt:
* platform/mac/fast/html/details-add-summary-5-and-click-expected.checksum:
* platform/mac/fast/html/details-add-summary-5-and-click-expected.png:
* platform/mac/fast/html/details-add-summary-5-and-click-expected.txt:
* platform/mac/fast/html/details-add-summary-5-expected.checksum:
* platform/mac/fast/html/details-add-summary-5-expected.png:
* platform/mac/fast/html/details-add-summary-5-expected.txt:
* platform/mac/fast/html/details-add-summary-6-and-click-expected.checksum:
* platform/mac/fast/html/details-add-summary-6-and-click-expected.png:
* platform/mac/fast/html/details-add-summary-6-and-click-expected.txt:
* platform/mac/fast/html/details-add-summary-6-expected.checksum:
* platform/mac/fast/html/details-add-summary-6-expected.png:
* platform/mac/fast/html/details-add-summary-6-expected.txt:
* platform/mac/fast/html/details-add-summary-7-and-click-expected.checksum:
* platform/mac/fast/html/details-add-summary-7-and-click-expected.png:
* platform/mac/fast/html/details-add-summary-7-and-click-expected.txt:
* platform/mac/fast/html/details-add-summary-7-expected.checksum:
* platform/mac/fast/html/details-add-summary-7-expected.png:
* platform/mac/fast/html/details-add-summary-7-expected.txt:
* platform/mac/fast/html/details-add-summary-8-and-click-expected.checksum:
* platform/mac/fast/html/details-add-summary-8-and-click-expected.png:
* platform/mac/fast/html/details-add-summary-8-and-click-expected.txt:
* platform/mac/fast/html/details-add-summary-8-expected.checksum:
* platform/mac/fast/html/details-add-summary-8-expected.png:
* platform/mac/fast/html/details-add-summary-8-expected.txt:
* platform/mac/fast/html/details-add-summary-9-and-click-expected.checksum:
* platform/mac/fast/html/details-add-summary-9-and-click-expected.png:
* platform/mac/fast/html/details-add-summary-9-and-click-expected.txt:
* platform/mac/fast/html/details-add-summary-9-expected.checksum:
* platform/mac/fast/html/details-add-summary-9-expected.png:
* platform/mac/fast/html/details-add-summary-9-expected.txt:
* platform/mac/fast/html/details-no-summary1-expected.checksum:
* platform/mac/fast/html/details-no-summary1-expected.png:
* platform/mac/fast/html/details-no-summary1-expected.txt:
* platform/mac/fast/html/details-no-summary2-expected.checksum:
* platform/mac/fast/html/details-no-summary2-expected.png:
* platform/mac/fast/html/details-no-summary2-expected.txt:
* platform/mac/fast/html/details-no-summary3-expected.checksum:
* platform/mac/fast/html/details-no-summary3-expected.png:
* platform/mac/fast/html/details-no-summary3-expected.txt:
* platform/mac/fast/html/details-no-summary4-expected.checksum:
* platform/mac/fast/html/details-no-summary4-expected.png:
* platform/mac/fast/html/details-no-summary4-expected.txt:
* platform/mac/fast/html/details-open-javascript-expected.checksum:
* platform/mac/fast/html/details-open-javascript-expected.png:
* platform/mac/fast/html/details-open-javascript-expected.txt:
* platform/mac/fast/html/details-open1-expected.checksum:
* platform/mac/fast/html/details-open1-expected.png:
* platform/mac/fast/html/details-open1-expected.txt:
* platform/mac/fast/html/details-open2-expected.checksum:
* platform/mac/fast/html/details-open2-expected.png:
* platform/mac/fast/html/details-open2-expected.txt:
* platform/mac/fast/html/details-open3-expected.checksum:
* platform/mac/fast/html/details-open3-expected.png:
* platform/mac/fast/html/details-open3-expected.txt:
* platform/mac/fast/html/details-open4-expected.checksum:
* platform/mac/fast/html/details-open4-expected.png:
* platform/mac/fast/html/details-open4-expected.txt:
* platform/mac/fast/html/details-open5-expected.checksum:
* platform/mac/fast/html/details-open5-expected.png:
* platform/mac/fast/html/details-open5-expected.txt:
* platform/mac/fast/html/details-open6-expected.checksum:
* platform/mac/fast/html/details-open6-expected.png:
* platform/mac/fast/html/details-open6-expected.txt:
* platform/mac/fast/html/details-position-expected.checksum:
* platform/mac/fast/html/details-position-expected.png:
* platform/mac/fast/html/details-position-expected.txt:
* platform/mac/fast/html/details-remove-summary-1-and-click-expected.checksum:
* platform/mac/fast/html/details-remove-summary-1-and-click-expected.png:
* platform/mac/fast/html/details-remove-summary-1-and-click-expected.txt:
* platform/mac/fast/html/details-remove-summary-1-expected.checksum:
* platform/mac/fast/html/details-remove-summary-1-expected.png:
* platform/mac/fast/html/details-remove-summary-1-expected.txt:
* platform/mac/fast/html/details-remove-summary-2-and-click-expected.checksum:
* platform/mac/fast/html/details-remove-summary-2-and-click-expected.png:
* platform/mac/fast/html/details-remove-summary-2-and-click-expected.txt:
* platform/mac/fast/html/details-remove-summary-2-expected.checksum:
* platform/mac/fast/html/details-remove-summary-2-expected.png:
* platform/mac/fast/html/details-remove-summary-2-expected.txt:
* platform/mac/fast/html/details-remove-summary-3-and-click-expected.checksum:
* platform/mac/fast/html/details-remove-summary-3-and-click-expected.png:
* platform/mac/fast/html/details-remove-summary-3-and-click-expected.txt:
* platform/mac/fast/html/details-remove-summary-3-expected.checksum:
* platform/mac/fast/html/details-remove-summary-3-expected.png:
* platform/mac/fast/html/details-remove-summary-3-expected.txt:
* platform/mac/fast/html/details-remove-summary-4-and-click-expected.checksum:
* platform/mac/fast/html/details-remove-summary-4-and-click-expected.png:
* platform/mac/fast/html/details-remove-summary-4-and-click-expected.txt:
* platform/mac/fast/html/details-remove-summary-4-expected.checksum:
* platform/mac/fast/html/details-remove-summary-4-expected.png:
* platform/mac/fast/html/details-remove-summary-4-expected.txt:
* platform/mac/fast/html/details-remove-summary-5-and-click-expected.checksum:
* platform/mac/fast/html/details-remove-summary-5-and-click-expected.png:
* platform/mac/fast/html/details-remove-summary-5-and-click-expected.txt:
* platform/mac/fast/html/details-remove-summary-5-expected.checksum:
* platform/mac/fast/html/details-remove-summary-5-expected.png:
* platform/mac/fast/html/details-remove-summary-5-expected.txt:
* platform/mac/fast/html/details-remove-summary-6-and-click-expected.checksum:
* platform/mac/fast/html/details-remove-summary-6-and-click-expected.png:
* platform/mac/fast/html/details-remove-summary-6-and-click-expected.txt:
* platform/mac/fast/html/details-remove-summary-6-expected.checksum:
* platform/mac/fast/html/details-remove-summary-6-expected.png:
* platform/mac/fast/html/details-remove-summary-6-expected.txt:
* platform/mac/fast/html/details-writing-mode-expected.checksum:
* platform/mac/fast/html/details-writing-mode-expected.png:
* platform/mac/fast/html/details-writing-mode-expected.txt:



Canonical link: https://commits.webkit.org/72570@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@82783 268f45cc-cd09-0410-ab3c-d52691b4dbfc